@@ -1463,7 +1463,7 @@ $wgCacheEpoch = '20030516000000';
  * to ensure that client-side caches don't keep obsolete copies of global
  * styles.
  */
-$wgStyleVersion = '205';
+$wgStyleVersion = '206';
 
 
 # Server-side caching:
